# mx-openclaw-template-solution

./: .env.example  .gitignore  PRODUCTION_READINESS_REPORT.md  README.md  agent.config.example.json  docker-compose.yml  jest.e2e.config.js  jest.scripts.config.js  launch.sh  package.json  tsconfig.json
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
backend/: Dockerfile  eslint.config.js  jest.config.js  package-lock.json  package.json
backend/src/: server.ts
backend/src/agent/: base-agent.test.ts  base-agent.ts  market-research-agent.test.ts  market-research-agent.ts
backend/src/cron/: cron-service.test.ts  cron-service.ts
backend/src/llm/: llm-service.ts
backend/src/mcp/: mcp-client.test.ts  mcp-client.ts
backend/src/mx/: config.ts  hiring.ts  (+1 more)
deploy/: Caddyfile  DEPLOYMENT.md
frontend/: Dockerfile  next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/hooks/: useChat.ts  usePayment.ts
frontend/services/: api.ts
infra/: Caddyfile  deploy.sh  destroy.sh  docker-compose.yml  logs.sh  provision.sh  remote-setup.sh
scripts/: build_manifest.ts  check_balance.ts  dev.sh  fund.ts  generate_wallet.ts  pin_manifest.ts  register.ts  setup.sh  sign_x402.ts  sign_x402_relayed.ts  update_manifest.ts
scripts/__tests__/: scripts.test.ts
src/: config.ts
src/utils/: RelayerAddressCache.ts
tests/: Cargo.toml  setup.sh
tests/e2e/: api_flow.e2e.ts  launch_infra.e2e.ts
tests/tests/common/: mod.rs
tests/tests/e2e/: agent_lifecycle.rs  full_research_session.rs  payment_flow.rs
(+25 files in other folders)
